Fixed tailwind and width issues | Readme
- Scaled images in the Scrollbar, so they won't be affected by tailwinds default sizing messing with them.
- The ImageScrollBar now by default has the elementWidth: fit-content and all the elements have the height of the scrollbar. That way images are displayed in their proper resolution by default and are not cut out anymore.
- Added a couple of examples to the readme, pictures might follow once I get some time.

--- a/src/components/ImageScrollBar/image-scroll-bar.css
+++ b/src/components/ImageScrollBar/image-scroll-bar.css
@@ -22,14 +22,6 @@
     animation-timing-function: linear;
 }
 
-.glider__slides {
-    animation-name: glider_one;
-}
-
-.glider__slides--dupe {
-    animation-name: glider_two;
-}
-
 /* Left to Right */
 @keyframes glider_one {
     0% {
@@ -87,4 +79,8 @@
     75.01% {
         transform: translateX(50%);
     }
+}
+
+.glider__viewport img{
+  max-width: none;
 }
